<resources>
    <string name="app_name">Statmaster</string>
    <string name="hint_teamName">Team Name</string>
    <string name="button_addGame">Add Game</string>
    <string name="hint_gameTitle">Game Title</string>
    <string name="hint_gameScore">Opposition Score</string>
    <string name="menu_addGame">Add</string>
    <string name="menu_addPlayer">Add Player</string>
    <string name="button_addPlayer">Add Player</string>
    <string name="button_showPlayers">Show Players</string>
    <string name="change_team_colour">Change Colour</string>
    <string name="title_activity_game_list">Games</string>
    <string name="hint_playerName">Name</string>
    <string name="hint_playerNumber">Number</string>
    <string name="menu_cancelPlayer">Cancel</string>
    <string name="enter_team_title"> Please enter a Team Name </string>
    <string name="enter_game_title"> Please enter a Game Title </string>
    <string name="enter_player_title"> Please enter a Player Name </string>
    <string name="save_player"> Save Player </string>
    <string name="save_game"> Save Game </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_player_image">Select player image</string>
    <string name="change_player_image">Change player image</string>
    <string name="menu_deleteGame">Delete</string>
    <string name="menu_deletePlayer">Delete</string>
    <string name="add_point">Add Point</string>
    <string name="minus_point">Minus Point</string>
    <string name="add_goal">Add Goal</string>
    <string name="minus_goal">Minus Goal</string>
    <string name="add_possession">Add Possession</string>
    <string name="minus_possession">Minus Possession</string>
    <string name="add_wide">Add Wide</string>
    <string name="minus_wide">Minus Wide</string>
    <string name="add_pass">Add Pass</string>
    <string name="minus_pass">Minus Pass</string>
    <string name="point_total">Points</string>
    <string name="wide_total">Wides</string>
    <string name="possession_total">Possessions</string>
    <string name="lost_possession_total">Lost Possessions</string>
    <string name="missed_pass_total">Missed Passes</string>
    <string name="goal_total">Goals</string>
    <string name="pass_total">Passes</string>
    <string name="accuracy">Shooting Accuracy</string>
    <string name="passingAcc">Passing Accuracy</string>
    <string name="retentionAverage">Ball Retention</string>
    <string name="menu_saveGame">Save</string>
    <string name="menu_savePlayer">Save</string>
    <string name="playerPoints">Total Points: </string>
    <string name="gamePoints">Points: </string>
    <string name="gameGoals">Goals: </string>
    <string name="playerGoals">Total Goals: </string>
    <string name="playerWides">Total Wides: </string>
    <string name="playerPossessions">Total Possessions: </string>
    <string name="playerLostPossessions">Lost Possessions </string>
    <string name="playerMissedPasses">Total Missed passes: </string>
    <string name="playerPasses">Total Passes: </string>
    <string name="checkbox_win">Won</string>
    <string name="checkbox_draw">Draw</string>
    <string name="checkbox_loss">Loss</string>
    <string name="title_activity_login"> Signup/Login to StatMaster</string>
    <string name="title_activity_team_list">Teams</string>
    <string name="title_activity_team">Team</string>
    <string name="title_activity_player">Player</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_userSettings">User Settings</string>
    <string name="menu_user">Users</string>
    <string name="menu_logout">Logout</string>
    <string name="hint_email">New Email</string>
    <string name="hint_password">New Password</string>
    <string name="save_settings">Save Settings</string>
    <string name="vs">VS</string>
    <string name="checkbox_error">Please select only one checkbox</string>
</resources>
