<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.GameView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="-46dp">

            <EditText
                android:id="@+id/gameTitle"
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="15dp"
                android:autofillHints=""
                android:hint="@string/hint_gameTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gameGoals"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:text="@string/gameGoals"
                app:layout_constraintBottom_toTopOf="@+id/addPlayer"
                app:layout_constraintEnd_toStartOf="@+id/gamePoints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.017" />

            <TextView
                android:id="@+id/gamePoints"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="20dp"
                android:padding="8dp"
                android:text="@string/gamePoints"
                app:layout_constraintBottom_toTopOf="@+id/winCheckbox"
                app:layout_constraintEnd_toStartOf="@+id/vs"
                app:layout_constraintStart_toEndOf="@+id/gameGoals"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/vs"
                android:layout_width="59dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="14dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/vs"
                app:layout_constraintEnd_toStartOf="@+id/score"
                app:layout_constraintStart_toEndOf="@+id/gamePoints"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/score"
                android:layout_width="131dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="13dp"
                android:layout_marginTop="132dp"
                android:hint="@string/hint_gameScore"
                android:inputType="numberDecimal"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/vs"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/winCheckbox"
                android:layout_width="76dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="132dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="163dp"
                android:text="@string/checkbox_win"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.775"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score" />

            <CheckBox
                android:id="@+id/drawCheckbox"
                android:layout_width="76dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="47dp"
                android:text="@string/checkbox_draw"
                app:layout_constraintEnd_toStartOf="@+id/winCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/score" />

            <CheckBox
                android:id="@+id/lossCheckbox"
                android:layout_width="76dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="292dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="41dp"
                android:text="@string/checkbox_loss"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="331dp"
                android:layout_height="429dp"
                android:layout_marginStart="38dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="42dp"
                android:fillViewport="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/winCheckbox">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="410dp"
                    android:layout_height="427dp"
                    android:scrollbars="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>