<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="views.player.PlayerView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-1dp">

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="256dp"
                android:layout_marginEnd="19dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerName" />

            <EditText
                android:id="@+id/playerName"
                android:layout_width="373dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="9dp"
                android:hint="@string/hint_playerName"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number" />

            <EditText
                android:id="@+id/number"
                android:layout_width="97dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:background="@drawable/ic_jersey_vector"
                android:gravity="center_horizontal"
                android:hint="@string/hint_playerNumber"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playerPoints"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/playerPoints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerName" />

            <TextView
                android:id="@+id/points"
                android:layout_width="84dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="142dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/playerPoints"
                app:layout_constraintTop_toBottomOf="@+id/playerName" />

            <TextView
                android:id="@+id/playerGoals"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/playerGoals"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerPoints" />

            <TextView
                android:id="@+id/goals"
                android:layout_width="86dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="142dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/playerGoals"
                app:layout_constraintTop_toBottomOf="@+id/points" />

            <TextView
                android:id="@+id/playerWides"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/playerWides"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerGoals" />

            <TextView
                android:id="@+id/wides"
                android:layout_width="87dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="142dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/playerWides"
                app:layout_constraintTop_toBottomOf="@+id/goals" />

            <TextView
                android:id="@+id/playerPasses"
                android:layout_width="105dp"
                android:layout_height="25dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/playerPasses"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerWides" />

            <TextView
                android:id="@+id/passes"
                android:layout_width="87dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="142dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/playerPasses"
                app:layout_constraintTop_toBottomOf="@+id/wides" />

            <TextView
                android:id="@+id/playerMissedPasses"
                android:layout_width="97dp"
                android:layout_height="38dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="16dp"
                android:text="@string/playerMissedPasses"
                app:layout_constraintBottom_toTopOf="@+id/playerLostPossessions"
                app:layout_constraintEnd_toStartOf="@+id/missedPasses"
                app:layout_constraintStart_toEndOf="@+id/passes"
                app:layout_constraintTop_toBottomOf="@+id/playerName" />

            <TextView
                android:id="@+id/missedPasses"
                android:layout_width="71dp"
                android:layout_height="24dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="148dp"
                android:layout_marginBottom="33dp"
                android:text="0"
                app:layout_constraintBottom_toTopOf="@+id/lostPossessions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/playerMissedPasses"
                app:layout_constraintTop_toBottomOf="@+id/playerName" />

            <TextView
                android:id="@+id/playerPossessions"
                android:layout_width="106dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="21dp"
                android:text="@string/playerPossessions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerPasses" />

            <TextView
                android:id="@+id/possessions"
                android:layout_width="82dp"
                android:layout_height="22dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="142dp"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/playerPossessions"
                app:layout_constraintTop_toBottomOf="@+id/passes" />

            <TextView
                android:id="@+id/playerLostPossessions"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="71dp"
                android:layout_marginBottom="12dp"
                android:text="@string/playerLostPossessions"
                app:layout_constraintBottom_toTopOf="@+id/chooseImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/possessions"
                app:layout_constraintTop_toBottomOf="@+id/playerMissedPasses" />

            <TextView
                android:id="@+id/lostPossessions"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:text="0"
                app:layout_constraintBottom_toTopOf="@+id/chooseImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/playerLostPossessions" />

            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="403dp"
                android:layout_height="153dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>